fix: glossary heading icon padding on mobile removed so delete all button is visible (ZNTA-1606)

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -5989,6 +5989,11 @@ button.close:focus, button.close:hover, button.close:active:focus {
     right: 0;
   }
 
+  .glossaryhead-actions-theme .glossary-button button {
+    padding-left:0;
+    padding-right:0;
+  }
+
   .header-classes {
     margin-left: 0;
     margin-bottom: @spacing-hr;
@@ -6391,7 +6396,6 @@ button.close:focus, button.close:hover, button.close:active:focus {
     width: 1px !important;
     overflow: hidden;
   }
-
   .hidden-xs {
     display: none !important;
   }
